Got the alignments correct finally

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,7 +86,7 @@ container {
   font-size : 20px;
   color : black;
   padding-left : 5px;
-  margin : 10px;
+  margin : 8px;
 }
 
 #openWin{
